# quote-rating

./: .gitignore  backup.sh  docker-compose.yml  init.sql  output.sql
api/: Cargo.toml
api/src/: main.rs
backend/: .env  Cargo.toml  Dockerfile  Rocket.toml  config.toml  init.sql
backend/src/: discord.rs  main.rs  models.rs  routes.rs
discord/: .env  Cargo.toml  output.sql
discord/src/: main.rs  models.rs  quote.rs  util.rs
frontend/: .editorconfig  package-lock.json  package.json  pnpm-lock.yaml  run.sh  svelte.config.js  vite.config.js  vite.config.js.timestamp-1668694523321.mjs
frontend-archive/.svelte-kit/: ambient.d.ts
frontend-archive/.svelte-kit/types/: route_meta_data.json
frontend-archive/.svelte-kit/types/src/routes/: $types.d.ts
frontend-archive/.svelte-kit/types/src/routes/leaderboard/: $types.d.ts
frontend-archive/.svelte-kit/types/src/routes/vote/: $types.d.ts
frontend-archive/static/: smui-dark.css  smui.css
frontend/src/: api.ts  dec.d.ts  models.ts
frontend/src/components/: block_quote_renderer.svelte  compact_block_quote_renderer.svelte  double_quote_svg.svelte  dropdown.svelte  list_item_renderer.svelte  quote.svelte  spinner.svelte  three_dots_dropdown.svelte  tooltip.svelte
frontend/src/routes/: +layout.svelte  +layout.svelter  +page.svelte  +page.svelter
frontend/src/routes/leaderboard/: +page.svelte  +page.svelter
frontend/src/routes/vote/: +page.svelte
frontend/src/theme/: app.scss
frontend/static/: smui-dark.css  smui.css
migrate_shit/: main.py
quote-web/: Cargo.toml  next.config.js  package.json
quote-web/components/: quote.tsx
quote-web/models/: models.ts
quote-web/pages/: index.tsx  rate.tsx
quote-web/src/: main.rs
quote-web/styles/: Home.module.css  Quote.module.scss  Rate.module.css  globals.css
