[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
sqlx = { version = "0.5", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "bigdecimal"
] }
once_cell = "1.10.0"
dotenv = "0.15.0"
tokio = { version = "1.18", features = ["full"] }
serde = "1.0.137"
chrono = { version = "0.4.19", features = ["serde"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
anyhow = "1.0.65"
toml = "0.5.9"
futures = "0.3.25"
serde_prometheus = "0.1.6"
bigdecimal = { version = "0.3.0", features = ["serde"] }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
default-features = false
features = [
  "rustls_backend",
  "builder",
  "cache",
  "chrono",
  "client",
  "gateway",
  "model",
  "http",
  "utils"
]
