[package]
name = "discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
toml = "0.5.9"
serde = "1.0"
tokio = { version = "1.18", features = ["full"] }
regex = "1"
sqlx = { version = "0.5", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
] }
once_cell = "1.10.0"
dotenv = "0.15.0"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features = [
  "builder",
  "cache",
  "framework",
  "model",
  "standard_framework",
  "rustls_backend",
  "utils",
]
